# llmn8

./: readme.md
client/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
server/: main.py  pyproject.toml  setup.py
