[project]
name = "project-microchat"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "cx-freeze>=8.4.1",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "llama-cpp-python>=0.3.16",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
